add link to download enclosures in feeds